--- a/index.html
+++ b/index.html
@@ -74,6 +74,65 @@
     <meta name="theme-color" content="#ffffff">
 
     <!--=====================================
+	=             Etiquetas Meta            =
+    =               ¿Analytics?             =
+	======================================-->
+
+    <link rel="author" href=" ">
+    <link rel="alternate" href=" " hreflang="es-mx">
+    <link rel="license" href=" " hreflang="es-mx">
+    <link rel="help" href=" ">
+    <link rel="canonical" href=" ">
+    <link rel="dns-prefetch" href=" ">
+    <link rel="dns-prefetch" href="https://google-analytics.com">
+
+    <!-- librerías opcionales que activan el soporte de HTML5 para IE8 -->
+    <!--[if lt IE 9]>
+            <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+            <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <!  [endif]-->
+
+    <script type="application/ld+json">
+        {
+          "@context": "http://www.schema.org",
+          "@type": "LocalBusiness",
+          "priceRange": "$",
+          "telephone": " ",
+          "name": "Freakland",
+          "url": " ",
+          "logo": " ",
+          "image": " ",
+          "description": "Es el lugar ideal para encontrar todo lo relacionado con videojuegos, anime, manga, novelas, comics, etc.",
+          "address": {
+            "@type": "PostalAddress",
+            "streetAddress": " ",
+            "addressLocality": " ",
+            "addressRegion": "Ciudad de Mexico",
+            "postalCode": " ",
+            "addressCountry": "Mexico"
+          },
+          "geo": {
+            "@type": "GeoCoordinates",
+            "latitude": " ",
+            "longitude": " "
+          },
+          "hasMap": " ",
+          "openingHours": " ",
+          "contactPoint": {
+            "@type": "ContactPoint",
+            "contactType": " ",
+            "telephone": " "
+          }
+        }
+      </script>
+
+    <!--=====================================
+	=            Hojas de estilo            =
+	======================================-->
+
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+
+    <!--=====================================
 	=            Etiquetas Title            =
 	======================================-->
 
@@ -83,7 +142,25 @@
 
 <body>
 
+
     <h1>Prueba de cambios</h1>
-    
+
+
+    <!--=====================================
+	=            Hojas de estilo            =
+	======================================-->
+
+    <script src="js/bootstrap.bundle.min.js"> </script>
+    <!--
+    <script>
+        var myCarousel = document.querySelector('#myCarousel');
+        var carousel = new bootstrap.Carousel(myCarousel);
+    </script>
+    -->
+
+
+
+
+
 </body>
 </html>
